# spl-player-tracking-release

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  cuda.yml  main.yml  setup.py
configs/: best_pso.yaml  gridsearch.yaml  pipeline.yaml
scripts/: download_models.sh  download_orc_calibration.sh  download_orc_dataset.sh  install.sh
spltrack/: pipeline.py  utils.py  visualization.py
spltrack/calibration/: distortion_correction.py  estimate_camera_extrinsics.py  estimate_dist_coeffs.py  intersections_detection.py  line_detection.py  utils.py  visualization.py
spltrack/calibration/lens_distortion_estimation/: CMakeLists.txt  ami_pol.c  ami_pol.h  lens_distortion.cpp  lens_distortion.h  lens_distortion_estimation.cpp  point2d.h
spltrack/calibration/lens_distortion_estimation/image/: image.h
spltrack/calibration/lens_distortion_estimation/image/ami_bmp/: ami_bmp.cpp  ami_bmp.h
spltrack/config/: __init__.py  config.py
spltrack/data/: annotations.py  constants.py  utils.py
spltrack/evaluation/: metrics.py  orc_trackeval_helpers.py  utils.py
spltrack/game_data/: __init__.py  game_events.py  game_state.py  team_comm.py
spltrack/global_optimization/: __init__.py  optimizer.py  pairwise_costs.py  unary_costs.py
spltrack/number_recognition/: __init__.py  model_utils.py  (+5 more)
tools/: PSO_search.py  convert_annotations.py  convert_logs_to_json.py  convert_orc_annotations_to_mot.py  evaluate_orc.py  generate_tracklets.py  gridsearch.py  render_annotated_sequence.py  timestamp_images.py  track_players.py  visualize_tracks.py
(+30 files in other folders)
